Revert "refactor: add event service for microservices"
This reverts commit 020d1700ab4a8936db3adaabf205a54891cbec8a.